No longer deletes IDs from DB objects, db.js now caches properly, and match team names now word wrap properly

--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -73,6 +73,8 @@ a:hover.no-underline, a:link.no-underline {
   padding-top: 0px;
 }
 
+h1.match-team-name {
+  word-wrap: break-word;
 }
 
 .match-header-number {
